fix: Hides social links on smaller devices

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -22,5 +22,5 @@
 
 .links_container {
   grid-area: links;
-  @apply flex w-auto gap-8 justify-end;
+  @apply hidden w-auto gap-8 justify-end lg:flex;
 }
